fdo#74981: cutting nothing should do nothing, should fix field dupes

Change-Id: I8a8c9bfcd0943904384bb12b510a050ef8df9adf