sw/source/core/txtnode/ndtxt.cxx
@@ -1923,6 +1923,8 @@ OUString SwTxtNode::InsertText( const OUString & rStr, const SwIndex & rIdx,
 void SwTxtNode::CutText( SwTxtNode * const pDest,
             const SwIndex & rStart, const xub_StrLen nLen )
 {
+    if(nLen == 0)
+        return;
     if(pDest)
     {
         SwIndex aDestStt(pDest, pDest->GetTxt().getLength());
